--- a/demodoc/main.html
+++ b/demodoc/main.html
@@ -1,9 +1,10 @@
 
-<config name="" value="" />
+<config base_path="value" property="value" />
 
-<include src="" />
+<include>other_file.html</include>
 
 <load package="demo" version=">=1.0" />
+<load param="value">demo>=1.0</load>
 
 <h1>Hello world!</h1>
 /* <p>You all suck!</p> */
