paged layout (but not splitting so not very useful yet)

--- a/demodoc/main.html
+++ b/demodoc/main.html
@@ -7,7 +7,7 @@
 <load param="value">demo>=1.0</load>
 
 <h1>Hello world!</h1>
-/* <p>You all suck!</p> */
+<comment><p>You all suck!</p></comment>
 <p>You're all great!</p>
 
 
