--- a/demodoc/out.html
+++ b/demodoc/out.html
@@ -18,6 +18,17 @@
 				padding: 6em 7em;
 				width: 210.0mm;  /* A4 which is narrower than USA letter */
 				height: 279.4mm;  /* USA letter which is shorter than A4 */
+				overflow: hidden;
+			}
+
+			.page:nth-child(odd)
+			{
+				padding: 2.5cm 4cm 2cm 3cm;
+			}
+
+			.page:nth-child(even)
+			{
+				padding: 2.5cm 3cm 2cm 4cm;
 			}
 
 			.A4 .page
@@ -133,7 +144,22 @@
 				<div class="page">
 					<aside class="page-header">Hello world!</aside>
 					<section>
-						{% include 'lorum.html' %}
+						<h1>Nunc de hominis summo bono quaeritur;</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eiuro, inquit adridens, iniquum, hac quidem de re; Illud dico, ea, quae dicat, praeclare inter se cohaerere. <a href='http://loripsum.net/' target='_blank'>Eadem fortitudinis ratio reperietur.</a> Certe, nisi voluptatem tanti aestimaretis. </p>
+						<h4>Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?</h4>
+						<p>Vide, quantum, inquam, fallare, Torquate. Quia nec honesto quic quam honestius nec turpi turpius. Bestiarum vero nullum iudicium puto. Quasi vero, inquit, perpetua oratio rhetorum solum, non etiam philosophorum sit. Estne, quaeso, inquam, sitienti in bibendo voluptas? Eaedem enim utilitates poterunt eas labefactare atque pervertere. Ecce aliud simile dissimile. </p>
+						<p>Hoc tu nunc in illo probas. <a href='http://loripsum.net/' target='_blank'>Ne discipulum abducam, times.</a> Hoc dixerit potius Ennius: Nimium boni est, cui nihil est mali. <a href='http://loripsum.net/' target='_blank'>Huius ego nunc auctoritatem sequens idem faciam.</a> <a href='http://loripsum.net/' target='_blank'>Quae duo sunt, unum facit.</a> Sed quia studebat laudi et dignitati, multum in virtute processerat. Scientiam pollicentur, quam non erat mirum sapientiae cupido patria esse cariorem. </p>
+						<p>Certe, nisi voluptatem tanti aestimaretis. Ita fit cum gravior, tum etiam splendidior oratio. An hoc usque quaque, aliter in vita? Si est nihil nisi corpus, summa erunt illa: valitudo, vacuitas doloris, pulchritudo, cetera. Hoc enim identidem dicitis, non intellegere nos quam dicatis voluptatem. Quid autem habent admirationis, cum prope accesseris? </p>
+						<p>Parvi enim primo ortu sic iacent, tamquam omnino sine animo sint. Sed quid minus probandum quam esse aliquem beatum nec satis beatum? </p>
+						<p>Inde igitur, inquit, ordiendum est. Hanc ergo intuens debet institutum illud quasi signum absolvere. Miserum hominem! Si dolor summum malum est, dici aliter non potest. Nos quidem Virtutes sic natae sumus, ut tibi serviremus, aliud negotii nihil habemus. Istam voluptatem perpetuam quis potest praestare sapienti? </p>
+						<h2>Ut placet, inquit, etsi enim illud erat aptius, aequum cuique concedere.</h2>
+						<p>Sed ea mala virtuti magnitudine obruebantur. Duo Reges: constructio interrete. Vide igitur ne non debeas verbis nostris uti, sententiis tuis. Quod quidem iam fit etiam in Academia. </p>
+						<p>Si enim ad populum me vocas, eum. At ille pellit, qui permulcet sensum voluptate. Atque haec ita iustitiae propria sunt, ut sint virtutum reliquarum communia. Quod autem satis est, eo quicquid accessit, nimium est; Quo modo autem philosophus loquitur? Quod non faceret, si in voluptate summum bonum poneret. Cum ageremus, inquit, vitae beatum et eundem supremum diem, scribebamus haec. At, illa, ut vobis placet, partem quandam tuetur, reliquam deserit. Quid autem habent admirationis, cum prope accesseris? Praeterea sublata cognitione et scientia tollitur omnis ratio et vitae degendae et rerum gerendarum. Nec vero alia sunt quaerenda contra Carneadeam illam sententiam. </p>
+						<p>At ille pellit, qui permulcet sensum voluptate. Quamquam tu hanc copiosiorem etiam soles dicere. </p>
+						<p>Eadem nunc mea adversum te oratio est. Eaedem enim utilitates poterunt eas labefactare atque pervertere. <a href='http://loripsum.net/' target='_blank'>Erit enim mecum, si tecum erit.</a> Isto modo ne improbos quidem, si essent boni viri. Qui est in parvis malis. Quid, si etiam iucunda memoria est praeteritorum malorum? Nos paucis ad haec additis finem faciamus aliquando; Egone quaeris, inquit, quid sentiam? </p>
+						<h3>Equidem, sed audistine modo de Carneade?</h3>
+						<p>Haec et tu ita posuisti, et verba vestra sunt. Certe non potest. Serpere anguiculos, nare anaticulas, evolare merulas, cornibus uti videmus boves, nepas aculeis. <a href='http://loripsum.net/' target='_blank'>Quae contraria sunt his, malane?</a> </p>
+						<p>Satis est ad hoc responsum. <a href='http://loripsum.net/' target='_blank'>Dat enim intervalla et relaxat.</a> </p>
 					</section>
 					<aside class="page-footer">page 2 of 3</aside>
 				</div>
