very minimal version of loading, preprocessing, parsing and especially handling all includes

--- a/demodoc/main.html
+++ b/demodoc/main.html
@@ -1,7 +1,7 @@
 
 <config base_path="value" property="value" />
 
-<include>other_file.html</include>
+<include src="lorum.html" />
 
 <load package="demo" version=">=1.0" />
 <load param="value">demo>=1.0</load>
