Tried to change the structure such that settings are in the source file, but the parsing directives and loader and pre-processor can't bei n source, since then source can't be loaded. So this is a dead end, and a settings file will be needed.

--- a/demodoc/main.html
+++ b/demodoc/main.html
@@ -3,8 +3,8 @@
 
 <include src="lorum.html" />
 
-<load package="demo" version=">=1.0" />
-<load param="value">demo>=1.0</load>
+<load package="compile" version=">=1.0" />
+<!-- <load param="value">demo>=1.0</load> -->
 
 <h1>Hello world!</h1>
 <comment><p>You all suck!</p></comment>
