--- a/demodoc/main.html
+++ b/demodoc/main.html
@@ -1,10 +1,12 @@
 
-<config base_path="value" property="value" />
+<config base_path="value" property="oldvalue" />
 
 <include src="lorum.html" />
 
-<load package="compile" version=">=1.0" />
+<package name="bootstrap" version=">=1.0" arg1="hello_world" confkey="someval" />
 <!-- <load param="value">demo>=1.0</load> -->
+
+<config elephant_color="grey" property="newvalue" />
 
 <h1>Hello world!</h1>
 <comment><p>You all suck!</p></comment>
