multithreaded loading works! (not faster though)

--- a/demodoc/main.html
+++ b/demodoc/main.html
@@ -1,7 +1,7 @@
 
 <config base_path="value" property="oldvalue" />
 
-<include src="lorum.html" />
+<include src="inc1.html" />
 
 <package name="bootstrap" version=">=1.0" arg1="hello_world" confkey="someval" />
 <!-- <load param="value">demo>=1.0</load> -->
@@ -9,6 +9,7 @@
 <config elephant_color="grey" property="newvalue" />
 
 <h1>Hello world!</h1>
+<include src="inc2.html" />
 <comment><p>You all suck!</p></comment>
 <p>You're all great!</p>
 
