working minimal compilation, resource files and live server

--- a/demodoc/main.html
+++ b/demodoc/main.html
@@ -3,8 +3,7 @@
 
 <include src="inc1.html" />
 
-<package name="bootstrap" version=">=1.0" arg1="hello_world" confkey="someval" />
-<!-- <load param="value">demo>=1.0</load> -->
+<package name="placeholdertheme" version=">=1.0" arg1="hello_world" />
 
 <config elephant_color="grey" property="newvalue" />
 
@@ -12,5 +11,5 @@
 <include src="inc2.html" />
 <comment><p>You all suck!</p></comment>
 <p>You're all great!</p>
-
+<!-- comment -->
 
