--- a/compiler/fallback_template.html
+++ b/compiler/fallback_template.html
@@ -15,7 +15,7 @@
 					<div class="alert alert-danger" role="alert">
 						<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						<strong>No template</strong>
-						This is a fallback template, since none of the packages you use provide a template.
+						This is a fallback template, since none of the packages you use provides a template.
 						Your document will likely look much better if you add a theme package.
 					</div>
 					<main>
